# shifty-backend

./: .env  .gitignore  AUTHENTICATION.md  CLAUDE.md  CUSTOM_EXTRA_HOURS_ENDPOINT.md  Cargo.toml  PROJECT_DESCRIPTION.md  README.md  build.nix  cli-update-version.sh  default.nix  docker.nix  env.example  flake.nix  update_versions.sh
app/: Cargo.toml
app/proptest-regressions/: integration_test.txt
app/src/: integration_test.rs  main.rs
dao/: Cargo.toml
dao/src/: absence.rs  billing_period.rs  billing_period_sales_person.rs  booking.rs  booking_log.rs  carryover.rs  custom_extra_hours.rs  cutover.rs  employee_work_details.rs  extra_hours.rs  feature_flag.rs  lib.rs  migration_source.rs  pdf_export_config.rs  permission.rs  rebooking_batch.rs  sales_person.rs  sales_person_shiftplan.rs  sales_person_unavailable.rs  session.rs  shiftplan.rs  shiftplan_report.rs  slot.rs  special_day.rs  text_template.rs  toggle.rs  user_invitation.rs  vacation_entitlement_offset.rs  week_message.rs  week_status.rs  working_hours.rs
dao_impl/: Cargo.toml
dao_impl/src/: booking.rs  carryover.rs  employee_work_details.rs  extra_hours.rs  lib.rs  sales_person.rs  sales_person_unavailable.rs  session.rs  shiftplan_report.rs  slot.rs  special_day.rs  working_hours.rs
dao_impl_sqlite/: Cargo.toml
dao_impl_sqlite/src/: absence.rs  billing_period.rs  billing_period_sales_person.rs  booking.rs  booking_log.rs  custom_extra_hours.rs  cutover.rs  employee_work_details.rs  extra_hours.rs  feature_flag.rs  lib.rs  migration_source.rs  pdf_export_config.rs  rebooking_batch.rs  sales_person.rs  sales_person_shiftplan.rs  sales_person_unavailable.rs  session.rs  shiftplan.rs  shiftplan_report.rs  slot.rs  special_day.rs  text_template.rs  toggle.rs  user_invitation.rs  vacation_entitlement_offset.rs  week_message.rs  week_status.rs
rest/: Cargo.toml
rest-types/: Cargo.toml
rest-types/src/: lib.rs
rest/src/: absence.rs  billing_period.rs  block_report.rs  booking.rs  booking_information.rs  booking_log.rs  custom_extra_hours.rs  cutover.rs  dev.rs  employee_work_details.rs  extra_hours.rs  feature_flag.rs  hello.rs  impersonate.rs  lib.rs  my_block.rs  pdf_export_config.rs  pdf_shiftplan.rs  permission.rs  rebooking.rs  report.rs  sales_person.rs  sales_person_shiftplan.rs  session.rs  shiftplan.rs  shiftplan_catalog.rs  shiftplan_edit.rs  slot.rs  special_day.rs  text_template.rs  toggle.rs  user_invitation.rs  vacation_balance.rs  vacation_entitlement_offset.rs  week_message.rs  week_status.rs  working_hours.rs
rest/tests/: content_type_surface.rs  openapi_snapshot.rs  openapi_surface.rs
rest/tests/snapshots/: openapi_snapshot__openapi_snapshot_locks_full_api_surface.snap
service/: Cargo.toml
service/src/: absence.rs  absence_conversion.rs  billing_period.rs  billing_period_report.rs  block.rs  block_report.rs  booking.rs  booking_information.rs  booking_log.rs  carryover.rs  carryover_rebuild.rs  clock.rs  config.rs  custom_extra_hours.rs  cutover.rs  datetime_utils.rs  employee_work_details.rs  extra_hours.rs  feature_flag.rs  ical.rs  lib.rs  my_block.rs  pdf_export.rs  pdf_export_config.rs  pdf_shiftplan.rs  permission.rs  rebooking_batch.rs  rebooking_reconciliation.rs  reporting.rs  sales_person.rs  sales_person_shiftplan.rs  sales_person_unavailable.rs  scheduler.rs  session.rs  shiftplan.rs  shiftplan_catalog.rs  shiftplan_edit.rs  shiftplan_report.rs  slot.rs  special_days.rs  (+12 more)
service_impl/: Cargo.toml
service_impl/src/: absence.rs  absence_conversion.rs  billing_period.rs  billing_period_report.rs  block.rs  block_report.rs  booking.rs  booking_information.rs  booking_log.rs  carryover.rs  carryover_rebuild.rs  clock.rs  config.rs  custom_extra_hours.rs  cutover.rs  employee_work_details.rs  extra_hours.rs  feature_flag.rs  ical.rs  lib.rs  macros.rs  pdf_export_config.rs  pdf_export_scheduler.rs  pdf_render.rs  pdf_shiftplan.rs  permission.rs  rebooking_batch.rs  rebooking_reconciliation.rs  reporting.rs  sales_person.rs  sales_person_shiftplan.rs  sales_person_unavailable.rs  scheduler.rs  session.rs  shiftplan.rs  shiftplan_catalog.rs  shiftplan_edit.rs  shiftplan_report.rs  shortday_gate.rs  slot.rs  (+12 more)
service_impl/src/test/: absence.rs  absence_conversion.rs  absence_derive_hours_range.rs  billing_period.rs  billing_period_report.rs  billing_period_snapshot_locking.rs  block.rs  block_report.rs  booking.rs  booking_information.rs  booking_information_chain_c.rs  booking_information_vaa.rs  booking_information_vfa.rs  booking_information_weekly_summary_year_batch.rs  booking_information_weekly_summary_year_boundary.rs  booking_information_weekly_summary_year_boundary_2026.rs  booking_log.rs  carryover.rs  carryover_rebuild.rs  custom_extra_hours.rs  cutover.rs  employee_work_details.rs  error_test.rs  extra_hours.rs  feature_flag.rs  mod.rs  pdf_export_config.rs  pdf_export_scheduler.rs  pdf_shiftplan.rs  permission_test.rs  rebooking_batch.rs  rebooking_reconciliation.rs  rebooking_roundtrip_neutrality.rs  reporting_additive_merge.rs  reporting_attendance_gate.rs  reporting_avg_attendance.rs  reporting_avg_weekly.rs  reporting_cap_overflow.rs  reporting_flag_off_bit_identity.rs  reporting_flag_on_integration.rs  (+22 more)
shifty-dioxus/: Cargo.toml  Dioxus.toml  cli-update-version.sh  default.nix  flake.nix  index.html
shifty-dioxus/assets/: config.json  main.css  tailwind.css
shifty-dioxus/shifty-design/project/: Shifty Preview.html  absences.jsx  modal.jsx  preview-data.jsx
shifty-dioxus/src/: api.rs  app.rs  error.rs  js.rs  loader.rs  router.rs
shifty-dioxus/src/component/: absence_convert_modal.rs  add_extra_days_form.rs  add_extra_hours_choice.rs  add_extra_hours_form.rs  base_components.rs  booking_log_table.rs  contract_modal.rs  day_aggregate_view.rs  dialog.rs  dropdown_base.rs  employee_short.rs  employee_view.rs  employee_weekly_histogram.rs  employee_work_details_form.rs  employees_list.rs  employees_shell.rs  error_view.rs  mod.rs  (+16 more)
shifty_bin/: Cargo.toml
shifty_bin/proptest-regressions/: integration_test.txt
shifty_bin/src/: integration_test.rs  main.rs
(+1849 files in other folders)
