[package]
name = "app"
version = "0.1.7"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mock_auth"]
#default = ["oidc"]
#default = []
oidc = ["rest/oidc"]
mock_auth = ["rest/mock_auth"]

[dependencies.rest]
path = "../rest"

[dependencies.dao_impl]
path = "../dao_impl"

[dependencies.dao]
path = "../dao"

[dependencies.service_impl]
path = "../service_impl"

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio", "sqlite"]

[dependencies.time]
version = "0.3.36"

[dependencies.time-macros]
version = "0.2.18"

[dependencies.dotenvy]
version = "0.15"
