[package]
name = "app"
version = "0.10.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mock_auth"]
#default = ["oidc"]
#default = []
oidc = ["rest/oidc"]
mock_auth = ["rest/mock_auth"]

[dependencies]
tracing = "0.1.40"

[dependencies.uuid]
version = "1.8"

[dependencies.rest]
path = "../rest"

[dependencies.dao_impl]
path = "../dao_impl"

[dependencies.dao]
path = "../dao"

[dependencies.service_impl]
path = "../service_impl"

[dependencies.service]
path = "../service"

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.sqlx]
version = "0.8.2"
features = ["runtime-tokio", "sqlite"]

[dependencies.time]
version = "0.3.36"

[dependencies.time-macros]
version = "0.2.18"

[dependencies.dotenvy]
version = "0.15"

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["json"]

[dev-dependencies]
proptest = "1.5.0"
