[package]
name = "dao"
version = "0.12.0-dev"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
mockall = "0.12.1"
thiserror = "1.0.59"
tracing = "0.1.40"
uuid = "1.8"

[dependencies.tokio]
version = "1.42.0"
features = ["test-util", "macros"]

[dependencies.time]
version = "0.3.36"
features = ["parsing", "macros", "formatting"]
