[package]
name = "dao"
version = "1.2.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
mockall = "0.13"
thiserror = "2.0"
tracing = "0.1.40"
uuid = "1.8"

[dependencies.shifty-utils]
path = "../shifty-utils"

[dependencies.tokio]
version = "1.44"
features = ["test-util", "macros"]

[dependencies.time]
version = "0.3.36"
features = ["parsing", "macros", "formatting"]
