[package]
name = "dao_impl"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio", "sqlite"]

[dependencies.dao]
path = "../dao"
