[package]
name = "dao_impl"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1.80"
tracing = "0.1.40"
uuid = "1.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio", "sqlite"]

[dependencies.dao]
path = "../dao"

[dependencies.time]
version = "0.3.36"
features = ["parsing"]
