[package]
name = "dao_impl_sqlite"
version = "v1.5.0-dev"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1.80"
tokio = "1.44"
tracing = "0.1.40"
uuid = "1.8.0"

[dependencies.shifty-utils]
path = "../shifty-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
version = "0.8.2"
features = ["runtime-tokio", "sqlite"]

[dependencies.dao]
path = "../dao"

[dependencies.time]
version = "0.3.36"
features = ["parsing"]
