[package]
name = "rest-types"
version = "2.6.4-dev"
edition = "2021"
resolver = "2"

[features]
#default = ["service-impl"]
default = []
service-impl = ["dep:service", "dep:shifty-utils", "dep:dao"]

[dependencies.service]
path = "../service"
optional = true

[dependencies.shifty-utils]
path = "../shifty-utils"
optional = true

# Phase 55 Plan 02 (D-55-02, D-55-04): RebookingBatchTO spiegelt die Phase 54
# DAO-Enums (Kind/State) und die Entity-Felder direkt fuer die Wire. Feature-
# gated identisch zu `service` — TO-Konsumenten ohne service-impl brauchen
# den DAO-Typ nicht.
[dependencies.dao]
path = "../dao"
optional = true

[dependencies.serde]
version = "1.0.198"
features = ["derive", "std", "alloc", "rc"]

[dependencies.uuid]
version = "1.8.0"
features = ["v4", "serde"]

[dependencies.time]
version = "0.3.36"
features = ["serde-human-readable"]

[dependencies.utoipa]
version = "5"
features = ["time", "rc_schema", "uuid"]


[dev-dependencies.serde_json]
version = "1.0.145"


[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
