[package]
name = "rest"
version = "v0.11.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#default = ["mock_auth"]
#default = ["oidc"]
default = []
oidc = ["dep:axum-oidc"]
mock_auth = []

[dependencies]
axum = "0.7.5"
bytes = "1.6.0"
http = "1.1.0"
http-body = "1.0.0"
serde_json = "1.0.116"
time = { version = "0.3.36", features = ["serde-human-readable"] }
tower-cookies = "0.10.0"
tracing = "0.1.40"

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.service]
path = "../service"

[dependencies.rest-types]
path = "../rest-types"
features = ["service-impl"]

[dependencies.uuid]
version = "1.8.0"
features = ["v4", "serde"]

[dependencies.serde]
version = "1.0.198"
features = ["derive", "std", "alloc", "rc"]

[dependencies.thiserror]
version = "1.0"

[dependencies.tower]
version = "0.4.4"

[dependencies.tower-sessions]
version = "0.12"

[dependencies.axum-oidc]
version = "0.4"
optional = true
