[package]
name = "rest"
version = "1.0.6"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#default = ["mock_auth"]
#default = ["oidc"]
default = []
oidc = ["dep:axum-oidc"]
mock_auth = []

[dependencies]
axum = "0.8.3"
bytes = "1.6.0"
http = "1.1.0"
http-body = "1.0.0"
serde_json = "1.0.116"
time = { version = "0.3.36", features = ["serde-human-readable"] }
tower-cookies = "0.10.0"
tracing = "0.1.40"

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.service]
path = "../service"

[dependencies.rest-types]
path = "../rest-types"
features = ["service-impl"]

[dependencies.shifty-utils]
path = "../shifty-utils"

[dependencies.uuid]
version = "1.8.0"
features = ["v4", "serde"]

[dependencies.serde]
version = "1.0"
features = ["derive", "std", "alloc", "rc"]

[dependencies.utoipa]
version = "5"

[dependencies.utoipa-axum]
version = "0.2"

[dependencies.utoipa-swagger-ui]
version = "9.0"
features = ["axum", "vendored"]

[dependencies.thiserror]
version = "2.0"

[dependencies.tower]
version = "0.5.2"

[dependencies.tower-sessions]
version = "0.14"

[dependencies.axum-oidc]
version = "0.6"
optional = true
