[package]
name = "service"
version = "1.1.1-dev"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1.80"
mockall = "0.13"
time = "0.3.36"
uuid = "1.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.thiserror]
version = "2.0"

[dependencies.dao]
path = "../dao"

[dependencies.shifty-utils]
path = "../shifty-utils"

[dev-dependencies.tokio]
version = "1.44"
