[package]
name = "service"
version = "0.0.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1.80"
mockall = "0.13"
time = { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.thiserror]
version = "2.0"

[dependencies.dao]
path = "../dao"

[dependencies.shifty-utils]
path = "../shifty-utils"

[dev-dependencies.tokio]
version = "1.44"


[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
