[package]
name = "service_impl"
version = "1.7.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.39"
mockall = "0.13"
tokio = "1.44"
tokio-cron = "0.1.3"
tracing = "0.1.40"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.service]
path = "../service"

[dependencies.dao]
path = "../dao"

[dependencies.shifty-utils]
path = "../shifty-utils"

[dependencies.time]
version = "0.3.36"
features = ["std", "formatting", "macros"]

[dependencies.uuid]
version = "1.8.0"
features = ["v4"]

[dev-dependencies.tokio]
version = "1.44"
features = ["full"]

[dependencies.time-tz]
version = "2"
features = ["db"]

[dependencies.tera]
version = "1.20.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]


[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
