[package]
name = "service_impl"
version = "2.3.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1.80"
base64 = "0.22"
chrono = "0.4.39"
mockall = "0.13"
thiserror = "1"
tokio = "1.44"
tokio-cron = "0.1.3"
# Phase 48 (EXP-01/EXP-03): tokio-cron-scheduler powers the PDF-Export cron
# loop. Distinct from the legacy `tokio-cron` (0.1.3) used by
# `SchedulerServiceImpl` — the two APIs differ; we keep both in-tree.
tokio-cron-scheduler = { version = "0.15", default-features = false }
tracing = "0.1.40"

# WebDAV / HTTP client for Phase 48 (Nextcloud PDF upload).
# reqwest_dav is a thin wrapper around reqwest that adds WebDAV verbs.
# We pin default-features=false + explicit rustls-tls to avoid pulling native-tls
# (openssl-sys) into the Nix build — analog to the pattern used in
# shifty-dioxus/Cargo.toml (see memory reference_dioxus_clippy_not_gated.md
# context). rustls-tls also satisfies threat T-48-09 (TLS spoofing mitigation:
# no danger_accept_invalid_certs).
reqwest_dav = { version = "0.3", default-features = false, features = ["rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

[dependencies.printpdf]
version = "0.7"
default-features = false
features = ["less-optimization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.service]
path = "../service"

[dependencies.dao]
path = "../dao"

[dependencies.shifty-utils]
path = "../shifty-utils"

[dependencies.time]
version = "0.3.36"
features = ["std", "formatting", "macros", "local-offset"]

[dependencies.uuid]
version = "1.8.0"
features = ["v4"]

[dev-dependencies.tokio]
version = "1.44"
features = ["full"]

# Test-only: mock HTTP server for WebDAV client tests (Phase 48). Owned by
# LukeMathWalker (well-known Rust ecosystem contributor, zero-to-production),
# dev-only, no prod impact — verified per plan Task 0 human-verify gate
# (auto-approved via CONTEXT Q2 decision).
[dev-dependencies.wiremock]
version = "0.6"

[dev-dependencies.dao_impl_sqlite]
path = "../dao_impl_sqlite"

[dev-dependencies.sqlx]
version = "0.8.2"
features = ["runtime-tokio", "sqlite"]

[dependencies.time-tz]
version = "2"
features = ["db"]

[dependencies.tera]
version = "1.20.0"

[dependencies.minijinja]
version = "2"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]


[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
