[package]
name = "shifty_bin"
version = "1.12.1"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mock_auth", "local_logging"]
#default = ["oidc"]
#default = []
oidc = ["rest/oidc"]
mock_auth = ["rest/mock_auth"]
local_logging = []
json_logging = []

[dependencies]
tracing = "0.1.40"

[dependencies.uuid]
version = "1.8"

[dependencies.rest]
path = "../rest"

[dependencies.dao_impl_sqlite]
path = "../dao_impl_sqlite"

[dependencies.dao]
path = "../dao"

[dependencies.service_impl]
path = "../service_impl"

[dependencies.service]
path = "../service"

[dependencies.shifty-utils]
path = "../shifty-utils"

[dependencies.tokio]
version = "1.44"
features = ["full"]

[dependencies.sqlx]
version = "0.8.2"
features = ["runtime-tokio", "sqlite"]

[dependencies.time]
version = "0.3.36"

[dependencies.time-macros]
version = "0.2.18"

[dependencies.dotenvy]
version = "0.15"

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["json"]

[dev-dependencies]
proptest = "1.5.0"
serde_json = "1.0"
# Phase 4 (Plan 04-07) — REST integration tests issue tower::oneshot calls
# against the in-process Cutover router for the SC-1 profile-via-REST test.
# `tower` provides ServiceExt::oneshot; `http-body-util` collects Response bodies.
# `axum` is needed to build the test router; matches the version in rest/Cargo.toml.
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1"
axum = "0.8.7"

[dev-dependencies.rest-types]
path = "../rest-types"
features = ["service-impl"]


[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
